--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Electro</string>
+
+    <string-array name="building_array">
+        <item>One Story</item>
+        <item>Two Story</item>
+    </string-array>
+
 </resources>
